correct .tabcontent height from 48 to 46px to ensure it covers entire mobile view until the tabs

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -88,7 +88,7 @@ body {
     color: white;
     background-color: #0093E9;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    min-height: calc(100vh - 48px);
+    min-height: calc(100vh - 46px);
     animation: fadeEffect 1s; /* Fading effect takes 1 second */
 }
 /* Go from zero to full opacity */
